--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,27 @@
 [metadata]
-name = dynautomate
-version = 0.0.1
+name = ROMtools
+version = 0.1.1dev0
+description = Tools for reduced order modelling of dynamical systems
 author = Turner Jennings
 author_email = turner.jennings@outlook.com
-description = Automated workflow for LS-DYNA keyword editing
+url = https://github.com/turnerjennings/ROMtools
+license = MIT
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/turnerjennings/dynautomate
-license = MIT
+classifiers =
+    Development Status :: 3 - Alpha
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: MIT License
+    Natural Language :: English
+    Topic :: Scientific/Engineering
 
 [options]
 packages = find:
-python_requires = >=3.10
+package_dir =
+    = src
+install_requires =
+    numpy
+    matplotlib
+
+[options.packages.find]
+where = src
