--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ROMtools
-version = 0.2.1dev0
+version = 0.2.5
 description = Tools for reduced order modelling of dynamical systems
 author = Turner Jennings
 author_email = turner.jennings@outlook.com
