Provide testpaths for pytest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,3 +36,7 @@ dev = [
 Repository = "https://github.com/turnerjennings/ROMtools.git"
 Documentation = "https://turnerjennings.github.io/ROMtools/"
 Issues = "https://turnerjennings.github.io/ROMtools/issues"
+
+[tool.pytest.ini_options]
+testpaths = "tests"
+
